* Avoid using percentages for row-gap (this was causing overlap on   the text reading pages) * Get rid of the template rows spec for user profile items and rely on   auto instead.

--- a/text/static/text/css/text.css
+++ b/text/static/text/css/text.css
@@ -102,8 +102,8 @@
 
     grid-column: 2;
     grid-template-columns: auto;
-    grid-row-gap: 10%;
-    row-gap: 10%;
+    grid-row-gap: 50px;
+    row-gap: 50px;
 }
 
 .question {
